# mcpfilesystem

./: README.md
filesystem-mcp/: README.md  claude_desktop_config.example.json  pyproject.toml  server.py
